[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.37.0", features = ["rt", "rt-multi-thread", "macros"] }
hyper = { version = "1.3.1", features = ["server", "http1"] }
http-body-util = "0.1.2"
hyper-util = { version = "0.1", features = ["full"] }